# csharp_calling_gtk-rs_issue

./: cmdline.sln
cmdline/: Program.cs  cmdline.csproj
cmdline/Properties/: AssemblyInfo.cs
cmdline/test_basic/: Cargo.toml
cmdline/test_basic/src/: lib.rs
